fix: word wrap styling problem

--- a/app/public/css/pages/detail.css
+++ b/app/public/css/pages/detail.css
@@ -44,6 +44,10 @@
   font-weight: bold;
 }
 
+.short-description p {
+  word-wrap: anywhere;
+}
+
 label {
   margin: 0;
 }
